# DavisZeroClaw

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  README.md  clippy.toml  deny.toml
browser-worker/: package.json  server.mjs
config/davis/: article_memory.toml  article_memory_overrides.toml  config.toml  control_aliases.json  control_aliases.toml  local.example.toml  query_classification.toml
crawl4ai_adapter/: __init__.py  __main__.py  engines.py  server.py  server_main.py  test_engines.py
docs/: MVP_TODO.md  PRD.md  Shortcut_and_Companion_Setup.md  System_Architecture.md
docs/superpowers/plans/: 2026-04-22-crawl4ai-supervised-server.md  2026-04-24-article-memory-crawl4ai-ingest.md  2026-04-24-article-memory-phase2-skill-and-dedup.md  2026-04-25-crawl4ai-cleaning-phase1.md  2026-04-25-crawl4ai-cleaning-phase2.md  2026-04-25-mempalace-integration.md  2026-04-25-topic-crawl-mvp.md  2026-04-27-cloudflare-tunnel.md  2026-05-04-shortcut-reply-channel.md  2026-05-09-router-dhcp-worker.md
docs/superpowers/specs/: 2026-04-24-article-memory-crawl4ai-ingest-design.md  2026-04-24-article-memory-phase2-skill-and-dedup-design.md  2026-04-24-crawl4ai-cleaning-upgrade-design.md  2026-04-27-cloudflare-tunnel-design.md  2026-05-04-shortcut-reply-channel-design.md  2026-05-09-router-dhcp-worker-design.md
project-skills/article-memory/: SKILL.md  SKILL.toml
project-skills/article-memory/references/: article_memory_api.md
project-skills/browser-bridge/: SKILL.md
project-skills/browser-bridge/references/: browser_bridge_api.md
project-skills/davis-memory-read/: SKILL.md
project-skills/ha-advanced-advisor/: SKILL.md  SKILL.toml
project-skills/ha-audit/: SKILL.md  SKILL.toml
project-skills/ha-config-advisor/: SKILL.md  SKILL.toml
project-skills/ha-config-advisor/references/: ha_advisor_api.md
project-skills/ha-control/: SKILL.md  SKILL.toml
project-skills/ha-control/references/: ha_control_api.md
project-skills/ha-reconciliation-advisor/: SKILL.md  SKILL.toml
project-skills/ha-reconciliation-advisor/references/: ha_reconciliation_api.md
project-skills/mempalace-memory/: SKILL.md
project-skills/mempalace-memory/references/: mempalace_tools.md
project-skills/model-switch/: SKILL.toml
project-skills/my-parcels/: SKILL.md  SKILL.toml
project-skills/my-parcels/references/: express_api.md
project-sops/: README.md
project-sops/my-parcels/: SOP.md  SOP.toml
project-workspace/: TOOLS.md
router_adapter/: README.md  __init__.py  __main__.py  pyproject.toml  router_dhcp_check.py
scripts/: build_shortcut.sh  ha_audit_proxy.py  start_davis.sh  stop_davis.sh
shortcuts/: 叫下戴维斯.shortcut.json
skills/ha-audit/: SKILL.md
skills/ha-audit/references/: ha_audit_api.md
src/: advisor.rs  app_config.rs  article_ingest.rs  article_memory.rs  audit.rs  browser.rs  cli.rs  constants.rs  crawl4ai.rs  crawl4ai_error.rs  crawl4ai_supervisor.rs  crawl_sources.rs  entity.rs  express.rs  ha_client.rs  ha_mcp.rs  ha_mcp_projection.rs  imessage_send.rs  lib.rs  local_proxy.rs  main.rs  model_routing.rs  models.rs  observability.rs  router_supervisor.rs  router_worker.rs  runtime_paths.rs  server.rs  server_digest.rs  support.rs
src/article_memory/: cleaning_internals.rs  config.rs  embedding.rs  internals.rs  llm_client.rs  mempalace_projection.rs  mod.rs  pii_scrub.rs  pipeline.rs  reports.rs  types.rs
src/article_memory/discovery/: feed_ingestor.rs  mod.rs  worker.rs
src/article_memory/discovery/search/: brave.rs  mock.rs  mod.rs
src/article_memory/ingest/: cleaning_fix.rs  content_signals.rs  engines.rs  host_profile.rs  learned_rules.rs  llm_extract.rs  mod.rs  quality_gate.rs  queue.rs  reply_text.rs  report_context.rs  rule_learning.rs  rule_learning_worker.rs  rule_mempalace_projection.rs  rule_samples.rs  rule_types.rs  types.rs  value_signals.rs  worker.rs
src/article_memory/refresh/: mod.rs  worker.rs
src/article_memory/translate/: mod.rs  prompt.rs  remote_chat.rs  worker.rs
src/cli/: articles.rs  crawl.rs  logs.rs  mempalace.rs  mod.rs  process.rs  router_dhcp.rs  service.rs  shortcut.rs  skills.rs  tests.rs  tunnel_service.rs
src/control/: config.rs  execution.rs  failures.rs  mod.rs  resolver.rs
src/mempalace_sink/: driver.rs  emitter.rs  mcp_stdio.rs  mod.rs  predicate.rs  worker_health.rs
src/shortcut_reply/: grader.rs  mod.rs  pending.rs  relay.rs  tests.rs  types.rs
tests/: README.md  __init__.py
tests/fixtures/: router_stub.py
tests/fixtures/discovery/: atom_sample.xml  brave_sample.json  rss_sample.xml  sitemap_sample.xml
tests/rust/: article_memory_ingest_worker.rs  browser.rs  cleaning_structure_test.rs  control.rs  crawl4ai.rs  express.rs  fixtures.rs  ha_mcp_projection.rs  imessage_send.rs  ingest_http.rs  mempalace_sink_smoke.rs  mod.rs  router_supervisor_spawn.rs  routes.rs  support.rs  topic_crawl_brave_integration.rs  topic_crawl_digest.rs  topic_crawl_invariants.rs  topic_crawl_translate.rs
tests/scripts/: common.sh  test_ha_real.sh  test_ha_webhook_e2e.sh
