[package]
name = "davis_zero_claw"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "davis-local-proxy"
path = "src/bin/davis_local_proxy.rs"

[[bin]]
name = "davis-ha-proxy"
path = "src/main.rs"

[[bin]]
name = "daviszeroclaw"
path = "src/bin/daviszeroclaw.rs"

[dependencies]
anyhow = "1"
axum = "0.7"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
hmac = "0.12"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
toml = "0.8"
toml_edit = "0.22"
url = "2"
urlencoding = "2"

# Release profile hardening for the launchd daemon binary.
# lto="thin"        — 15-25% smaller binary, faster startup
# codegen-units=1   — ~5-10% runtime perf at the cost of slower compile
# strip="symbols"   — cuts binary size roughly in half; no in-process debuggers
[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"

# Treat clippy warnings as errors on any `cargo clippy` invocation so CI and
# local runs both enforce the lint floor. Downgrade specific lints here if
# they start biting real work.
[lints.clippy]
all = { level = "deny", priority = -1 }
