[package]
name = "davis_zero_claw"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "davis-local-proxy"
path = "src/bin/davis_local_proxy.rs"

[[bin]]
name = "davis-ha-proxy"
path = "src/main.rs"

[[bin]]
name = "daviszeroclaw"
path = "src/bin/daviszeroclaw.rs"

# Standalone integration test. Other tests/rust/*.rs files are compiled
# into the library's test harness via `#[path]` in `src/lib.rs`; this one
# is a true integration test that links against the lib as an external
# crate so it can verify `BraveSearch` is reachable through the public
# API surface end-to-end.
[[test]]
name = "topic_crawl_brave_integration"
path = "tests/rust/topic_crawl_brave_integration.rs"

[[test]]
name = "topic_crawl_translate"
path = "tests/rust/topic_crawl_translate.rs"

[[test]]
name = "topic_crawl_digest"
path = "tests/rust/topic_crawl_digest.rs"

[[test]]
name = "topic_crawl_invariants"
path = "tests/rust/topic_crawl_invariants.rs"

[[test]]
name = "router_supervisor_spawn"
path = "tests/rust/router_supervisor_spawn.rs"

[features]
# Opt-in to `Crawl4aiSupervisor::for_test(...)` from downstream crates
# (anyone mocking the adapter). Always on in `cargo test`; off in release
# builds unless explicitly requested.
test-util = []

[dependencies]
anyhow = "1"
async-trait = "0.1"
feed-rs = "2"
thiserror = "2"
axum = "0.7"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
futures = "0.3"
hmac = "0.12"
libc = "0.2"
lru = "0.18"
pathdiff = "0.2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
scraper = "0.19"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tempfile = "3"
tokio = { version = "1", features = ["io-util", "macros", "process", "rt-multi-thread", "signal", "sync", "time"] }
toml = "0.8"
toml_edit = "0.22"
tower-http = { version = "0.5", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
url = "2"
urlencoding = "2"
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
walkdir = "2"
wiremock = "0.6"

# Release profile hardening for the launchd daemon binary.
# lto="thin"        — 15-25% smaller binary, faster startup
# codegen-units=1   — ~5-10% runtime perf at the cost of slower compile
# strip="symbols"   — cuts binary size roughly in half; no in-process debuggers
[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"

# Treat clippy warnings as errors on any `cargo clippy` invocation so CI and
# local runs both enforce the lint floor. Downgrade specific lints here if
# they start biting real work.
[lints.clippy]
all = { level = "deny", priority = -1 }
