[project]
name = "router_adapter"
version = "0.1.0"
description = "Davis Playwright adapter for LAN router admin automation"
requires-python = ">=3.10"
dependencies = [
    "playwright>=1.40",
    "python-dotenv>=1.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["router_adapter*"]
